--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Magegang",
-            "email": "hi@magegang.tech"
+            "email": "hi@magegang.com"
         }
     ],
     "minimum-stability": "dev",
